<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Title field -->
            <EditText
                android:id="@+id/edit_book_title"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Button for reducing quantity -->
                <Button
                    android:id="@+id/decrement_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/decrement" />

                <!-- Button for increasing quantity -->
                <Button
                    android:id="@+id/increment_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/increment" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>


            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_book_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier telephone number field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

            <!-- Reorder button (calls supplier via intent) -->
            <Button
                android:id="@+id/reorder_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/reorder" />

            <!-- Remove book from database -->
            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:padding="8dp"
                android:text="@string/delete" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>